# xpilot-ng

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL.txt  Local.config  Makefile  Makefile.in  README  README.txt  cmake-build.sh  config.h  config.h.in  config.status  configure  configure.ac  mapconvert.py  marahacked_teamcup2001.xp2
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cmake/: config.h.in
contrib/: Makefile  Makefile.in
contrib/jxpmap/CVS/: Entries  Repository
contrib/jxpmap/images/CVS/: Entries  Repository
contrib/jxpmap/org/CVS/: Repository
contrib/jxpmap/org/xpilot/CVS/: Repository
contrib/jxpmap/org/xpilot/jxpmap/CVS/: Entries  Repository
contrib/jxpmap/python/CVS/: Entries  Repository
contrib/mapzip/CVS/: Entries  Repository  Root
contrib/msub/: Makefile
contrib/xpngcc/: Makefile  Makefile.in
doc/: CREDITS  ChangeLog  Makefile  Makefile.in
doc/man/: .cvsignore  Makefile  Makefile.in  xp-mapedit._man  xp-replay._man  xp-replay.man  xpilot._man  xpilot.man  xpilots._man  xpilots.man
lib/: CMakeLists.txt  Makefile  Makefile.in
lib/fonts/: Makefile  Makefile.in
lib/maps/: Makefile  Makefile.in
lib/sound/: Makefile  Makefile.in
lib/textures/: Makefile  Makefile.in
src/: CMakeLists.txt  Imakefile  Makefile  Makefile.am  Makefile.in  Makefile.std
src/client/: CMakeLists.txt  Imakefile  Makefile  Makefile.in  README.rank  about.c  afaudio.c  bitmaps.c  bitmaps.h  client.c  client.h  colors.c  configure.c  configure.h  default.c  gfx2d.c  gfx2d.h  guimap.c  guimap.h  guiobjects.c  guiobjects.h  ignore.c  ignore.h  join.c  netclient.c  paint.c  paint.h  paintdata.c  paintdata.h  painthud.c  paintmap.c  paintobjects.c  paintradar.c  protoclient.h  query.c  record.c  rplayaudio.c  shipshape.c  shipshape_c.c  talkmacros.c  (+11 more)
src/client/NT/: Makefile  Makefile.in  XPilot.ini  winBitmap.c  winBitmap.h  winColors.c  xpilot.plg
src/client/NT/res/: Makefile  Makefile.in
src/client/items/: Makefile  Makefile.in
src/client/sdl/: CMakeLists.txt  Makefile  Makefile.in  text.c
src/client/x11/: CMakeLists.txt  Makefile  Makefile.in  xpclient_x11.h
src/common/: CMakeLists.txt  Imakefile  Makefile  Makefile.in  checknames.h  commonproto.h  config.c  config.h  const.h  draw.h  error.c  math.c  metaserver.h  net.c  net.h  pack.h  pack_real.h  pack_tmp.h  recordfmt.h  rules.h  setup.h  socklib.c  socklib.h  types.h  version.h  xpcommon.h
src/common/NT/: Makefile  Makefile.in  winX.c  winX.h  winX11.c  winX_.h
src/common/NT/bindist/: Makefile  Makefile.in  README.txt  READMEbin.txt  ServerMOTD.txt
src/mapedit/: Makefile  Makefile.am  Makefile.in  tools.c  xp-mapedit
src/replay/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  buttons.h
src/replay/tools/: Makefile  Makefile.in
src/server/: Imakefile  Makefile  Makefile.in  alliance.c  asteroid.c  asteroid.h  auth.c  cannon.c  cell.c  click.h  cmdline.c  collision.c  command.c  connection.h  contact.c  defaults.h  event.c  fileparser.c  frame.c  global.h  item.c  laser.c  map.c  map.h  metaserver.c  netserver.c  netserver.h  object.c  object.h  objpos.c  objpos.h  parser.c  play.c  player.c  polygon.c  proto.h  rank.c  rank.h  robot.c  robotdef.c  (+22 more)
src/server/old/: asteroid.h  cannon.h  map.h  netserver.c  netserver.h  parser.c  player.c  robot.c  robotdef.c  sched.c  server.c  serverconst.h  ship.c  tuner.c  update.c
