# lib/CMakeLists.txt
include(GNUInstallDirs)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/fonts/
    DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/fonts
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/maps/
    DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/maps
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/textures/
    DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/textures
)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/sound")
    install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/sound/
        DESTINATION ${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}/sound
    )
endif()
